# kryptos

./: .dockerignore  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  ATTACK_COVERAGE_REPORT.md  AUTONOMY_AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  K3_VALIDATION_RESULTS.md  K4_PROGRESS_TRACKER.md  K4_V1_SPINE_SUMMARY.md  LICENSE  METRICS.md  PHASE6_QUICK_REF.md  PHASE_5_BRANCH_README.md  PLAN.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SPRINT1_PROGRESS.md  TASKS.md  TECHDEBT.md  TODO_2025-01-27.md  eslint.config.mjs  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
config/: config.json  llm_config.yaml
data/: bigrams.tsv  k4_cipher.txt  letter_freq.tsv  quadgrams.tsv  quadgrams_high_quality.tsv  spy_eval_labels.csv  trigrams.tsv
docs/: 10KFT.md  AGENTS_ARCHITECTURE.md  AGENT_EVOLUTION_ROADMAP.md  API_REFERENCE.md  ARCHIVED_SCRIPTS.md  AUDIT_2025-10-26.md  AUTONOMOUS_SYSTEM.md  AUTONOMY_AUDIT.md  AUTOPILOT.md  CHANGELOG.md  COMPOSITE_DETECTION_STATUS.md  CONSOLIDATION_PLAN.md  DEPRECATIONS.md  EXPANSION_PLAN.md  EXPERIMENTAL_TOOLING.md  HANDOFF-manifesto-pr-cadence-20260403.md  INDEX.md  INTELLIGENCE IDEAS.md  K123_PATTERN_ANALYSIS.md  K4_MASTER_PLAN.md  K4_STRATEGY.md  LOGGING.md  MAINTENANCE_GUIDE.md  MANIFESTO.md  MASTER_AGENT_PROMPT.md  NEXT_24_HOURS.md  NEXT_PHASE.md  OPS_V2_STRATEGIC_DIRECTOR.md  PERF.md  PHASE_5_ROADMAP.md  (+23 more)
(+453 files in other folders)
