[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptos"
version = "0.0.1"
description = "Kryptos tooling and autopilot harness"
authors = [ { name = "nitsuah" } ]
readme = "README.md"
license = { text = "MIT" }
keywords = ["kryptos","autopilot","crypto"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]

# license expression removed; using PEP-621 license table above

[tool.setuptools.packages.find]
where = ["src"]
